# 3rd-semester

./: README.md
1LR/cpp/: program
1LR/cpp/src/: array.cpp  array.h  doubleLinkList.cpp  doubleLinkList.h  main.cpp  main.h  queue.cpp  queue.h  singleLinkList.cpp  singleLinkList.h  stack.cpp  stack.h  tree.cpp  tree.h
1LR/go/: array.go  doubleLinkList.go  main.go  queue.go  singleLinkList.go  stack.go
2LR/1task/src/: 1.cpp  infixToPostfix.cpp  infixToPostfix.h  stack.cpp  stack.h
2LR/2task/src/: 2.cpp  hashTable.cpp  hashTable.h
2LR/3task/src/: main.cpp  set.cpp  set.h
2LR/4task/src/: function.cpp  function.h  main.cpp
2LR/5task/src/: main.cpp  tree.cpp  tree.h
2LR/6task/src/: 3variant.cpp  hashMapChain.cpp  hashMapChain.h  testChain.cpp  testChain.h  testMain.cpp  testOpenAdd.cpp  testOpenAdd.h
2LR/7task/src/: LRUCache.cpp  LRUCache.h  main.cpp
5LR/: cave
LR3/: CMakeLists.txt  array.h  doubleList.h  hashTable.h  queue.h  singleList.h  stack.h  treeAVL.h
LR3/Go/: coverage.html  coverage.out  go.mod
LR3/Go/lr3/: array.go  array_test.go  avl.go  avl_test.go  double_list.go  double_list_test.go  hashtable.go  hashtable_test.go  queue.go  queue_test.go  single_list.go  single_list_test.go  stack.go  stack_test.go
LR3/test/: array_test.cpp  doubleList_test.cpp  hashTable_test.cpp  main.cpp  queue_test.cpp  singleList_test.cpp  stack_test.cpp  treeAVL_test.cpp
LR4/: 1  1.cpp  2  2.cpp  3  3.cpp
LR6/: main.cpp  tanks_blitz
